--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ body {
   border-radius: 30px;
 }
 .membership-row{
-  width: 80%;
+  width: 85%;
 }
 .membership-row-inner{
   padding: 30px 50px !important;
@@ -111,7 +111,7 @@ body {
 
 
 .tab-inner-main{
-  width: 85%;
+  width: 80%;
 }
 .tab-content{
   border: none !important;
@@ -242,7 +242,7 @@ font-size: 14px;
   padding: 30px 0;
 }
 .should-outer {
-  background: url("./Images/Bg.jpg");
+  background: url("./Images/un1.png");
 }
 .should-last{
   width: 60%;
@@ -268,17 +268,19 @@ font-size: 14px;
   font-size: 20px;
 }
 .should-bar {
-  line-height: normal;
   display: flex;
   align-items: center;
   flex-direction: row;
   border: none;
   background: #fff;
   border-radius: 20px;
-  padding: 5px;
+  padding: 7px;
+}
+.should-bar p{
+  margin-top: 10px;
 }
 .should-bar img {
-  width: 10%;
+  /* width: 10%; */
   margin-right: 10px;
 }
 .faq-outer {
